[tool.poetry]
name = "lavender"
version = "0.1.1"
description = "The slightly more compromising code formatter."
readme = "README.md"
authors = [
  "Michael Smith <michael@spinda.net>",
  "Łukasz Langa <lukasz@langa.pl>",
  "Carol Willing <carolcode@willingconsulting.com>",
  "Carl Meyer <carl@oddbird.net>",
  "Jelle Zijlstra <jelle.zijlstra@gmail.com>",
  "Mika Naylor <mail@autophagy.io>",
  "Zsolt Dollenstein <zsol.zsol@gmail.com>",
]
homepage = "https://github.com/spinda/lavender"
license = "MIT"
keywords = ["automation", "formatter", "yapf", "autopep8", "gofmt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

packages = [
  { include = "lavender.py" },
  { include = "blib2to3" },
]

[tool.poetry.scripts]
lavender = "lavender:main"
# lavenderd = "lavenderd:main"  # TODO: how to make this only appear on `poetry install -E d`?

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = { version = "^3.3.2", optional = true }
aiohttp_cors = { version = "^0.7.0", optional = true }
appdirs = "^1.4.0"
attrs = "^18.1.0"
click = "^6.5"
pathspec = "^0.6.0"
regex = ">=2019.8.19"
toml = "^0.9.4"
typed-ast = "^1.4.0"

[tool.poetry.extras]
d = ["aiohttp", "aiohttp_cors"]
